test/files/pos/t7364/BadList.java
public class BadList extends java.util.ArrayList {
	public java.util.ArrayList foo() { return null; }
}
