test/files/neg/t11788/Foo.java
public class Foo {
	private String java;

	public java.lang.Integer test() {
		return java.lang.Integer.valueOf(42);
	}
}
